Fixed alignment issues with styles

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body, html {
   color: #ffffff;
   width: 100%;
   overflow-x: hidden;
-  font-size: 2vw;
+  /*font-size: 2vw;*/
   height: 100%;
 }
 
@@ -15,9 +15,13 @@ a {
   text-decoration: none;
 }
 
-h1, h3, h4 {
+h1, h2, h3, h4 {
   color: #ffffff;
   font-family: 'Montserrat', sans-serif;
+}
+
+p {
+  font-family: 'Lato', sans-serif;
 }
 
 .gold {
@@ -30,6 +34,7 @@ h1, h3, h4 {
 
 .mdl-layout__tab-bar {
   background-color: #005BD6;
+  justify-content: center;
 }
 
 .mdl-layout__tab-bar-button {
@@ -43,6 +48,17 @@ h1, h3, h4 {
 .mdl-layout__header{
   background-color: #005bd6;
   width: 100%;
+}
+
+.mdl-layout-title {
+  margin-left: -30px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+
+.social-icons img {
+  width: 24px;
+  padding: 10px;
 }
 
 .mdl-button {
@@ -84,8 +100,9 @@ h1, h3, h4 {
 }
 
 .main-intro p {
-  font-size: 1.25em;
-  line-height: 1.5em;
+  font-size: 2.25em;
+  width: 80%;
+  line-height: 1.65em;
   font-family: 'Montserrat', sans-serif;
   font-weight: 300;
 }
@@ -93,6 +110,10 @@ h1, h3, h4 {
 .material-icons {
   font-size: 20px;
   vertical-align: middle;
+}
+
+.page-content {
+  margin-top: 5%;
 }
 
 #aboutme ul li {
@@ -105,7 +126,8 @@ h1, h3, h4 {
 }
 
 .portfolio {
-  width: 1080px;
+  width: 80%;
+  max-width: 1620px;
   margin: 0 auto;
   overflow-x: scroll;
 }
@@ -183,6 +205,32 @@ h1, h3, h4 {
     url('images/places/accra.png') bottom right 15% no-repeat #46B6AC;
 }
 
+.contact-content {
+  /*width: 320px;*/
+  width: auto;
+  min-width: 300px;
+  margin: 0 auto;
+  padding: 0 20% 0 20%;
+}
+
+.contact-content p {
+  font-size: 2em;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.mdl-mini-footer {
+  background-color: #04459C;
+  bottom: 0;
+}
+
+.mdl-mini-footer a {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  text-align: right;
+  right: 0;
+}
+
+
 .watermark p {
   font-family: 'Montserrat', sans-serif;
   font-size: 70px;
@@ -197,21 +245,35 @@ h1, h3, h4 {
   text-overflow: ellipsis;
 }
 
-
-
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 768px) {
   body, html {
     background-color: #005bd6;
     color: #ffffff;
     width: 100%;
     overflow-x: hidden;
-    font-size: 4vw;
+    /*font-size: 4vw;*/
     height: 100%;
+  }
+
+  #main img {
+  width:200px;
+  border-radius: 50%;
+  margin: 0 auto;
+  border: 3px solid #FFEB00;
+}
+
+  .main-intro h1 {
+    font-size: 3em;
   }
 
   .main-intro p {
     font-size: 2em;
+    width: 100%;
   }
+
+  #aboutme > .page-content {
+  margin-top: 5%;
+}
 
   .portfolio {
     width: 1080px;
@@ -228,5 +290,59 @@ h1, h3, h4 {
   .watermark {
     display: none;
   }
+
+  .contact-content {
+  /*width: 320px;*/
+  width: auto;
+  min-width: 300px;
+  margin: 0 auto;
+  padding: 0 20% 0 20%;
 }
 
+.contact-content p {
+  font-size: 1.5em;
+  font-family: 'Montserrat', sans-serif;
+}
+}
+
+@media screen and (max-width: 414px) {
+  .main-intro p {
+    font-size: 1.25em;
+    width: 100%;
+  }
+
+  #main img {
+    width: 150px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .main-intro h1 {
+    font-size: 2em;
+  }
+
+  .section-title {
+    font-size: 2em;
+  }
+
+  #aboutme > .page-content {
+  margin-top: 1%;
+  }
+
+  .journey-intro {
+    width: 90%;
+    margin-left: 5%;
+    font-size: 1.25em;
+  }
+
+  .contact-content {
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  }
+
+  .contact-content p {
+  font-size: 1em;
+  font-family: 'Montserrat', sans-serif;
+  }
+}
